TODO file updated.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
 _ Agregar un parametro de is_ready para ignorar mensajes que lleguen antes de la calibración o del engage
 (Mientras tanto, iniciar primero nodo odrive y luego el nodo de walle con la parte del odrive comentada)
 (Un workaround es que el nodo del joystick espere a que el nodo del odrive este listo para publicar)
+
+_ Medir con precision el wheel_track y tyre_circunference
+
+_ Agregar servicio para poder volver a poner a los motores en closed_loop_control
